<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
        <!-- Search, should appear as action button -->
        <item android:id="@+id/action_search"
            android:icon="@drawable/ic_action_search"
            android:title="@string/action_search"
            android:showAsAction="never" />
        <!-- Settings, should always be in the overflow -->
        <item android:id="@+id/action_settings"
            android:title="@string/action_settings"
            android:showAsAction="never" />
        <item android:id="@+id/action_example" android:title="@string/action_example"
            app:showAsAction="withText|ifRoom" />

    </menu>