<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    >
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:paddingLeft="10sp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView android:text="@string/postbox_id"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>
        <EditText
            android:id="@+id/postbox_id_editable"
            android:textSize="17sp"
            android:singleLine="true"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
        </EditText>
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:paddingLeft="10sp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView android:text="@string/ZIPCODE"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>
        <EditText
            android:id="@+id/ZIPCODE_editable"
            android:textSize="17sp"
            android:singleLine="true"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
        </EditText>
    </LinearLayout>

    <Button
        android:id="@+id/search_button"
        android:text="@string/search_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:padding="10sp"
        android:text="@string/state"/>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:padding="10sp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView android:text="@string/postbox_id"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>
        <TextView
            android:id="@+id/postbox_id_post"
            android:textSize="17sp"
            android:singleLine="true"
            android:editable="false"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
        </TextView>
    </LinearLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:padding="10sp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView android:text="@string/ZIPCODE"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>
        <TextView
            android:id="@+id/ZIPCODE_post"
            android:textSize="17sp"
            android:singleLine="true"
            android:editable="false"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
        </TextView>
    </LinearLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:padding="10sp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView android:text="@string/postbox_longitude"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>
        <TextView
            android:id="@+id/postbox_longitude_post"
            android:textSize="17sp"
            android:singleLine="true"
            android:editable="false"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
        </TextView>
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:padding="10sp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView android:text="@string/postbox_latitude"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>
        <TextView
            android:id="@+id/postbox_latitude_post"
            android:textSize="17sp"
            android:singleLine="true"
            android:editable="false"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
        </TextView>
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:padding="10sp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView android:text="@string/send_date"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>
        <TextView
            android:id="@+id/send_date_post"
            android:textSize="17sp"
            android:singleLine="true"
            android:editable="false"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
        </TextView>
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:padding="10sp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView android:text="@string/send_time"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>
        <TextView
            android:id="@+id/send_time_post"
            android:textSize="17sp"
            android:singleLine="true"
            android:editable="false"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
        </TextView>
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:padding="10sp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView android:text="@string/left_box_mail_num"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>
        <TextView
            android:id="@+id/left_box_mail_num_post"
            android:textSize="17sp"
            android:singleLine="true"
            android:editable="false"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
        </TextView>
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:padding="10sp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView android:text="@string/left_box_mail_weight"
            android:textSize="17sp"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>
        <TextView
            android:id="@+id/left_box_mail_weight_post"
            android:textSize="17sp"
            android:singleLine="true"
            android:editable="false"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
        </TextView>
    </LinearLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:padding="10sp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView android:text="@string/right_box_mail_num"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>
        <TextView
            android:id="@+id/right_box_mail_num_post"
            android:textSize="17sp"
            android:singleLine="true"
            android:editable="false"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
        </TextView>
    </LinearLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:padding="10sp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView android:text="@string/right_box_mail_weight"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>
        <TextView
            android:id="@+id/right_box_mail_weight_post"
            android:textSize="17sp"
            android:singleLine="true"
            android:editable="false"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
        </TextView>
    </LinearLayout>
</LinearLayout>